create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1345,3 +1345,20 @@ blockquote {
 .cid-s1WWH64niQ .social-list {
   text-align: center;
 }
+.cid-s1WWH64niQ .follow-title,
+.cid-s1WWH64niQ .social-list,
+.cid-s1WWH64niQ .logo {
+  color: #606060;
+}
+.cid-s1WWH64niQ .address-title,
+.cid-s1WWH64niQ .address-block {
+  color: #606060;
+}
+.cid-s1WWH64niQ .contacts-title,
+.cid-s1WWH64niQ .contacts-block {
+  color: #606060;
+}
+.cid-s1WWH64niQ .opening-hours-title,
+.cid-s1WWH64niQ .opening-hours {
+  color: #606060;
+}
