create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1362,3 +1362,6 @@ blockquote {
 .cid-s1WWH64niQ .opening-hours {
   color: #606060;
 }
+.cid-s1WWH64niQ .hours-column {
+  text-align: center;
+}
