create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1407,91 +1407,15 @@ blockquote {
 .cid-s1WWH64niQ .hours-column {
   text-align: center;
 }
-.cid-seBBHLf34p {
-  padding-top: 0rem;
-  padding-bottom: 4rem;
-  background-color: #ffffff;
-}
-.cid-seBBHLf34p .mbr-section-title {
-  margin-top: 30px;
-  margin-bottom: 0;
-}
-.cid-seBBHLf34p .mbr-text {
-  margin-top: 20px;
-  margin-bottom: 0;
-  color: #919dab;
-  margin-top: 30px;
-}
-.cid-seBBHLf34p .mbr-section-btn {
-  margin-top: 45px;
-}
-.cid-seBBHLf34p .mbr-section-btn .btn {
-  height: 60px;
-  font-weight: 500;
-}
-.cid-seBBHLf34p img {
-  width: 100px;
-  height: 100px;
-  border-radius: 30px;
-}
-@media (max-width: 767px) {
-  .cid-seBBHLf34p .mbr-section-btn {
-    margin-top: 30px;
-  }
-  .cid-seBBHLf34p .mbr-section-btn .btn {
-    height: 50px;
-  }
-  .cid-seBBHLf34p .mbr-text {
-    margin-top: 10px;
-  }
-}
-#custom-html-17 {
+#custom-html-1c {
   /* Type valid CSS here */
 }
-#custom-html-17 div {
+#custom-html-1c div {
   padding: 80px 0;
   color: #777;
   text-align: center;
 }
-#custom-html-17 p {
+#custom-html-1c p {
   font-size: 60px;
   color: #777;
-}
-.cid-seBC2L1khs {
-  padding-top: 0rem;
-  padding-bottom: 4rem;
-  background-color: #ffffff;
-}
-.cid-seBC2L1khs .mbr-section-title {
-  margin-top: 30px;
-  margin-bottom: 0;
-}
-.cid-seBC2L1khs .mbr-text {
-  margin-top: 20px;
-  margin-bottom: 0;
-  color: #919dab;
-  margin-top: 30px;
-}
-.cid-seBC2L1khs .mbr-section-btn {
-  margin-top: 45px;
-}
-.cid-seBC2L1khs .mbr-section-btn .btn {
-  height: 60px;
-  font-weight: 500;
-}
-.cid-seBC2L1khs img {
-  width: 100px;
-  height: 100px;
-  border-radius: 30px;
-}
-@media (max-width: 767px) {
-  .cid-seBC2L1khs .mbr-section-btn {
-    margin-top: 30px;
-  }
-  .cid-seBC2L1khs .mbr-section-btn .btn {
-    height: 50px;
-  }
-  .cid-seBC2L1khs .mbr-text {
-    margin-top: 10px;
-  }
 }
