create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1231,7 +1231,7 @@ blockquote {
 }
 .cid-s1Xgu9nelT {
   padding-top: 0rem;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
 .cid-s1Xgu9nelT h1 {
@@ -1254,6 +1254,18 @@ blockquote {
 }
 .cid-s1Xgu9nelT .mbr-section-title {
   color: #606060;
+}
+#custom-html-g {
+  /* Type valid CSS here */
+}
+#custom-html-g div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-g p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-seBAngjjMY {
   padding-top: 0rem;
@@ -1394,4 +1406,353 @@ blockquote {
 }
 .cid-s1WWH64niQ .hours-column {
   text-align: center;
+}
+.cid-s1WRuCwEwB .dropdown-item:before {
+  font-family: MobiriseIcons !important;
+  content: '\e966';
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  color: #ff3366;
+  top: 50%;
+  font-size: 1rem;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  -webkit-transform: translateY(-50%) scale(0, 1);
+  transform: translateY(-50%) scale(0, 1);
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.cid-s1WRuCwEwB .navbar-buttons {
+  flex-wrap: wrap;
+}
+.cid-s1WRuCwEwB .nav-item,
+.cid-s1WRuCwEwB .nav-link,
+.cid-s1WRuCwEwB .navbar-caption {
+  font-weight: normal;
+}
+.cid-s1WRuCwEwB .nav-item:focus,
+.cid-s1WRuCwEwB .nav-link:focus {
+  outline: none;
+}
+@media (min-width: 992px) {
+  .cid-s1WRuCwEwB .dropdown-item:hover:before {
+    -webkit-transform: translateY(-50%) scale(1, 1);
+    transform: translateY(-50%) scale(1, 1);
+    width: 1rem;
+  }
+  .cid-s1WRuCwEwB .nav-item .nav-link {
+    position: relative;
+  }
+  .cid-s1WRuCwEwB .nav-item .nav-link:before {
+    content: "";
+    position: absolute;
+    z-index: 3;
+    left: 0;
+    right: 100%;
+    bottom: -0.2em;
+    background: #ff3366;
+    height: 3px;
+    -webkit-transition-property: right;
+    transition-property: right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .cid-s1WRuCwEwB .nav-item:hover .nav-link:before,
+  .cid-s1WRuCwEwB .nav-item.open .nav-link:before {
+    right: 0;
+  }
+}
+.cid-s1WRuCwEwB .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.cid-s1WRuCwEwB .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-s1WRuCwEwB .dropdown .dropdown-menu .dropdown-item:hover {
+  padding-right: 1rem;
+  padding-left: 3rem;
+}
+.cid-s1WRuCwEwB .dropdown .dropdown-menu .dropdown-item:hover .soc-item .mbr-iconfont:before {
+  -webkit-transform: scale(0, 1);
+  transform: scale(0, 1);
+}
+.cid-s1WRuCwEwB .dropdown .dropdown-menu .dropdown-item .soc-item .mbr-iconfont {
+  margin-left: -1.8rem;
+  padding-right: 1rem;
+  font-size: inherit;
+}
+.cid-s1WRuCwEwB .dropdown .dropdown-menu .dropdown-item .soc-item .mbr-iconfont:before {
+  display: inline-block;
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.cid-s1WRuCwEwB .navbar {
+  min-height: 77px;
+  transition: all .3s;
+  background: #971346;
+  background: none;
+}
+.cid-s1WRuCwEwB .navbar.opened {
+  transition: all .3s;
+  background: #971346 !important;
+}
+.cid-s1WRuCwEwB .navbar .dropdown-item {
+  padding: .235rem 2rem;
+}
+.cid-s1WRuCwEwB .navbar .navbar-collapse {
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  z-index: 1;
+}
+@media (max-width: 991px) {
+  .cid-s1WRuCwEwB .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-s1WRuCwEwB .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-s1WRuCwEwB .navbar .dropdown-menu {
+    background: transparent !important;
+  }
+  .cid-s1WRuCwEwB .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-s1WRuCwEwB .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-s1WRuCwEwB .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: .25rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 55%;
+  }
+  .cid-s1WRuCwEwB .navbar .navbar-logo img {
+    height: 3.8rem !important;
+  }
+  .cid-s1WRuCwEwB .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-s1WRuCwEwB .navbar .dropdown-menu .dropdown-item {
+    padding: .25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-s1WRuCwEwB .navbar .navbar-brand {
+    -webkit-flex-shrink: initial;
+    flex-shrink: initial;
+    -webkit-flex-basis: auto;
+    flex-basis: auto;
+    word-break: break-word;
+  }
+  .cid-s1WRuCwEwB .navbar .navbar-toggler {
+    -webkit-flex-basis: auto;
+    flex-basis: auto;
+  }
+  .cid-s1WRuCwEwB .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+}
+.cid-s1WRuCwEwB .navbar.navbar-short {
+  background: #971346 !important;
+  min-height: 60px;
+}
+.cid-s1WRuCwEwB .navbar.navbar-short .navbar-logo img {
+  height: 3rem !important;
+}
+.cid-s1WRuCwEwB .navbar.navbar-short .navbar-brand {
+  padding: 0;
+}
+.cid-s1WRuCwEwB .navbar-brand {
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  -webkit-align-items: center;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all .3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-s1WRuCwEwB .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-s1WRuCwEwB .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-s1WRuCwEwB .dropdown-item.active,
+.cid-s1WRuCwEwB .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-s1WRuCwEwB .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-s1WRuCwEwB .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-s1WRuCwEwB .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-s1WRuCwEwB .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #971346;
+  z-index: 2;
+}
+.cid-s1WRuCwEwB .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-s1WRuCwEwB .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-s1WRuCwEwB ul.navbar-nav {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s1WRuCwEwB .navbar-buttons {
+  text-align: center;
+}
+.cid-s1WRuCwEwB button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all .2s;
+  position: relative;
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-s1WRuCwEwB button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-s1WRuCwEwB button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-s1WRuCwEwB button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s1WRuCwEwB button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s1WRuCwEwB button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-s1WRuCwEwB nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s1WRuCwEwB nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-s1WRuCwEwB nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-s1WRuCwEwB nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s1WRuCwEwB .navbar-dropdown {
+  padding: .5rem 1rem;
+  position: fixed;
+}
+.cid-s1WRuCwEwB a.nav-link {
+  -webkit-justify-content: center;
+  justify-content: center;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-s1WRuCwEwB .soc-item .mbr-iconfont {
+  font-size: 1rem;
+  color: #7fa8d7;
+  display: inline-flex;
+}
+.cid-s1WRuCwEwB .soc-item .mbr-iconfont:before {
+  padding: .5rem;
+  border: 1px solid;
+  border-radius: 100px;
+}
+.cid-s1WRuCwEwB .soc-item {
+  margin: .5rem .3rem;
+}
+.cid-s1WRuCwEwB .icons-menu {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding-left: 1rem;
+  text-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-s1WRuCwEwB a.nav-link .mbr-iconfont-btn,
+.cid-s1WRuCwEwB a.dropdown-item .mbr-iconfont-btn {
+  margin-right: 10px;
+}
+.cid-s1WRuCwEwB a.nav-link:hover .mbr-iconfont-btn,
+.cid-s1WRuCwEwB a.dropdown-item:hover .mbr-iconfont-btn {
+  opacity: 0;
+  margin-left: -20px;
+}
+.cid-s1WRuCwEwB a.dropdown-item .mbr-iconfont-btn {
+  margin-top: -4px;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-s1WRuCwEwB .navbar {
+    height: 77px;
+  }
+  .cid-s1WRuCwEwB .navbar.opened {
+    height: auto;
+  }
+  .cid-s1WRuCwEwB .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+#custom-html-1f {
+  /* Type valid CSS here */
+}
+#custom-html-1f div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-1f p {
+  font-size: 60px;
+  color: #777;
 }
