--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,9 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
-
-
-
-
-
 .card__btn .btn {
   border-radius: 50px !important;
 }
@@ -1072,7 +1066,7 @@ blockquote {
   opacity: .7;
   margin: 35px 0 0;
   font-weight: 500;
-  color: #f5ab35;
+  color: #fb7522;
 }
 @media (max-width: 767px) {
   .cid-s1Xb2qUwkB .dragArea {
@@ -1267,6 +1261,88 @@ blockquote {
 }
 .cid-s1XfyYHcaO .article-counter-left {
   color: #cccccc;
+}
+.cid-sZGQ2Uvn0Q {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sZGQ2Uvn0Q h4 {
+  font-weight: 600;
+  color: #e2e2e2;
+}
+.cid-sZGQ2Uvn0Q .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-sZGQ2Uvn0Q .article {
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+.cid-sZGQ2Uvn0Q .mbr-text-right {
+  color: #606060;
+}
+.cid-sZGQ2Uvn0Q .mbr-text-left {
+  color: #606060;
+}
+.cid-sZGQ2Uvn0Q .article-counter-right {
+  color: #cccccc;
+}
+.cid-sZGQ2Uvn0Q .article-counter-left {
+  color: #cccccc;
+}
+.cid-sZGQqBXW6b {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sZGQqBXW6b h4 {
+  font-weight: 600;
+  color: #e2e2e2;
+}
+.cid-sZGQqBXW6b .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-sZGQqBXW6b .article {
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+.cid-sZGQqBXW6b .mbr-text-right {
+  color: #606060;
+}
+.cid-sZGQqBXW6b .mbr-text-left {
+  color: #606060;
+}
+.cid-sZGQqBXW6b .article-counter-right {
+  color: #cccccc;
+}
+.cid-sZGQqBXW6b .article-counter-left {
+  color: #cccccc;
+}
+.cid-sZGQWFLPmh {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-sZGQWFLPmh h1 {
+  margin-bottom: 0;
+}
+.cid-sZGQWFLPmh .mbr-text {
+  opacity: .7;
+  margin: 35px 0 0;
+  font-weight: 500;
+  color: #00b16a;
+}
+@media (max-width: 767px) {
+  .cid-sZGQWFLPmh .dragArea {
+    justify-content: center;
+    flex-direction: column;
+  }
+  .cid-sZGQWFLPmh .form-control {
+    margin-bottom: 15px;
+  }
+}
+.cid-sZGQWFLPmh .mbr-section-title {
+  color: #ea3223;
 }
 .cid-s1Xgu9nelT {
   padding-top: 0rem;
